[package]
name = "android-gif"
version = "1.0.0"
authors = ["JiaYe"]
edition = "2021"

[dependencies]
log = "0.4.14"
gif = "0.11.3"
android_logger = "0.10.1"
jni = { version = "0.19.0", default-features = false }
libc = "0.2.109"
ndk = "0.5.0"
ndk-sys = "0.2.2"
anyhow = "1.0"

[dependencies.image]
version = "0.23.14"
default_features = false
features = ["gif"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'
