[package]
name = "android-gif"
version = "1.0.1"
authors = ["JiaYe"]
edition = "2021"

[dependencies]
log = "0.4.17"
gif = "0.12.0"
android_logger = "0.12.0"
anyhow = "1.0"
raqote = { version="0.8.2", default_features = false }
once_cell = "1.17.1"
image = "0.24.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'
